[package]
name = "pinocchio_mpl_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = "0.9.2"
pinocchio-system = "0.3.0"
# pinocchio-token = { version = "0.4.0" }
pinocchio-token = { version = "0.4.0", optional = true }
pinocchio-pubkey = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.2.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
pinocchio-token-2022 = { version = "0.1.0", optional = true }
paste = "1.0"
